# thoth

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  README2.md  TODO-CONTENT.md  TODO.md  WORKON-PIVOT-ASAP.md  WORLD-LORE.md  conf.lua  init.lua  main.lua  thoth-4.0.0-1.rockspec  thoth.lua  thoth_profile.txt  to do.md  todo.txt
.github/: copilot-instructions.md
benchmarks/: mixed_factory.lua  rpg_expedition.lua  simulation_benchmark.cpp  tactical_large_map.lua  tactical_route.lua
docs/: accessibility-4.9.md  accessibility-7.7.md  alpha-feedback-triage.md  alpha-launch-kit.md  api-style.md  asset-licenses.md  asset-survey.md  audio-mix-7.3.md  benchmark-log.md  beta-feedback-triage.md  beta-launch-kit.md  bug-bash-4.6.md  bug-fixes-4.7.md  clean-install-8.4.md  combat-juice-7.2.md  content-rating-self-assessment.md  content-rules.md  cutscene-map.md  dev-log.md  developer-workflow.md  enemy-sprite-map.md  engine-spike.md  hero-sprite-map.md  itch-alpha-page.md  itch-beta-page.md  itch-final-page.md  itch-vertical-slice-devlog.md  launch-announcement-8.12.md  license-audit.md  localization-7.5.md  market-audit.md  memory-profile-7.9.md  merchant-balance-6.14-6.15.md  merchant-kit.md  micro-animations-7.1.md  modding.md  model-survey.md  music-sourcing.md  perf-final-7.8.md  perf-pass-4.8.md  (+28 more)
scripts/: create_github_issues.sh
spike/: g3d  main.lua
src/: Love2DAnimation.lua  Love2DCollision.lua  Love2DDraw.lua  Love2DEcs.lua  Love2DInput.lua  Love2DPointIn.lua  Love2DStates.lua  aeolian.lua  atmosphere.lua  bathymetry.lua  benchmark.lua  biomes.lua  cache.lua  climate.lua  clipmap.lua  coast.lua  diagnostics.lua  erosion.lua  events.lua  export.lua  game.lua  graphs.lua  heaps.lua  hillslope.lua  hud.lua  hydrology.lua  journal.lua  karst.lua  keybinds.lua  links.lua  lru.lua  math.lua  math2D.lua  meander.lua  menu.lua  noise.lua  orometry.lua  performance.lua  periglacial.lua  player.lua  (+25 more)
test/: testAdapterEdgeCases.lua  testAdapters.lua  testAddonCommands.lua  testAddonCooldowns.lua  testAddonResources.lua  testAddonStatus.lua  testApiStyle.lua  testCache.lua  testCoreContainers.lua  testDeterministicRuntime.lua  testEcsBehavior.lua  testEvents.lua  testFrameworkSmoke.lua  testGameModules.lua  testGameplayAddonExample.lua  testGameplayAddonPack.lua  testGameplayPrimitives.lua  testGraphs.lua  testHeaps.lua  testImports.lua  testInputBindings.lua  testInputReplay.lua  testLinks.lua  testMath.lua  testMath2D.lua  testMigration.lua  testObservability.lua  testPathfindingProperties.lua  testPerformance.lua  testPlatformUtilities.lua  testQueues.lua  testReadmeSnippets.lua  testRuntime.lua  testRuntimeExtensions.lua  testRuntimeSnapshots.lua  testSerialize.lua  testSerializeHardening.lua  testShowcaseExample.lua  testSpatialProperties.lua  testStacks.lua  (+10 more)
tests/: assets.lua  bench.baseline.json  bench.lua  package.lua  registry.lua  replays.lua  run.lua  test_world.cpp
tikrit/: makefile
tools/: bake_orometry.lua  make-billboards.py  (+2 more)
(+232 files in other folders)
